# non-recursive-make

./: Makefile.am  Makefile.in  README.md  configure.ac
test_tinyxml2/src/: xmltest.cpp
tinyxml2/src/: tinyxml2.cpp
